# SpeechToNote

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  main.py
backend/duck-db/: __init__.py  config.py  connection.py  operations_speaker_notes.py  pyproject.toml
backend/speech-to-note-backend/: Dockerfile  pyproject.toml  requirements.txt
backend/speech-to-note-backend/app/: __init__.py  config_local_docker_env.py  main.py
backend/speech-to-note-backend/app/configs/: base.py  config.py  env_config_example.py
backend/speech-to-note-backend/app/migrations/: speaker_command_migrations.py  speaker_note_migrations.py
backend/speech-to-note-backend/app/models/response/: base_response_model.py
backend/speech-to-note-backend/app/models/speaker_command/: sc_request_model.py  speaker_command_model.py
backend/speech-to-note-backend/app/models/speaker_note/: sn_request_model.py
backend/speech-to-note-backend/app/routes/: speaker_command_route.py  speaker_note_route.py
backend/speech-to-note-backend/duck-db/: connection.py  operations_speaker_notes.py  run_operations.py
backend/speech-to-note-backend/tests/: README.md  conftest.py  test_speaker_command.py  test_speaker_note.py
backend/text-to-note-backend/: main.py  requirements.txt
frontend/: Dockerfile
manifests/: fastapi-deployment.yaml  fastapi-service.yaml  kind-config.yaml  mongo-deployment.yaml  mongo-pv.yaml  mongo-pvc.yaml  mongo-service.yaml  vue-deployment.yaml  vue-service.yaml
scripts/: README.md  pyproject.toml  update.py  versions.py
scripts/docker/: build_image_docker.py  (+7 more)
(+95 files in other folders)
