[project]
name = "speech-to-note-backend"
version = "1.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "fastapi[standard]==0.115.4",
    "httpx==0.28.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.10.1",
    "pymongo==4.10.1",
    "pytest==8.4.1",
    "uvicorn==0.32.0",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.1",
]
